[package]
name = "yew_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leaflet = "0.2.1"
serde_json = "1.0.81"
wasm-bindgen = "0.2.80"
yew = "0.19"

[dependencies.web-sys]
version = "0.3.57"
features = ["HtmlAnchorElement", "console", "Window", "Document"]
